// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: Header should render collapsed 1`] = `
.c4 {
  font-size: 0.85rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 600;
  cursor: pointer;
  color: #FBA52B;
}

.c4 i {
  font-size: 0.8em;
  margin-right: 4px;
}

.c15 {
  font-size: 0.85rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 600;
  cursor: pointer;
  color: #FBA52B;
  pointer-events: none;
  color: #A7A7A7;
  font-weight: 400;
}

.c15 i {
  font-size: 0.8em;
  margin-right: 4px;
}

.c5 {
  width: 190px;
}

.c6 {
  max-width: 300px;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: 5px;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c12 {
  white-space: nowrap;
  margin: 0 5px 3px 0;
}

.c13 {
  color: #A7A7A7;
  font-weight: 600;
  margin-bottom: 3px;
}

.c0 {
  position: -webkit-sticky;
  position: sticky;
  top: 0;
  z-index: 1;
}

.c1 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-bottom: 1px solid #D8D8D8;
  background-image: url(/images/food.jpg);
  background-color: #A7A7A7;
  background-size: cover;
  background-position: center;
}

.c2 {
  width: 100%;
  background: rgba(0,0,0,0.8);
  height: 80px;
  padding: 0 30px;
}

.c3 {
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  max-width: 1200px;
  margin: 0 auto;
}

.c7 {
  font-size: 1.3rem;
  text-align: center;
  font-weight: 400;
  color: #A7A7A7;
  display: none;
}

.c8 {
  background-color: #F3F3F3;
  border-bottom: 1px solid #D8D8D8;
  padding: 20px 30px;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  max-width: 1200px;
  margin: 0 auto;
}

@media only screen and (min-width:330px) {
  .c4 {
    font-size: 1rem;
  }
}

@media only screen and (min-width:540px) {
  .c4 {
    -webkit-transition: color 0.2s ease-out;
    transition: color 0.2s ease-out;
  }

  .c4:hover {
    color: #EC7E00;
  }
}

@media only screen and (min-width:330px) {
  .c15 {
    font-size: 1rem;
  }
}

@media only screen and (min-width:540px) {
  .c15 {
    -webkit-transition: color 0.2s ease-out;
    transition: color 0.2s ease-out;
  }

  .c15:hover {
    color: #EC7E00;
  }
}

@media only screen and (min-width:768px) {

}

@media only screen and (min-width:992px) {
  .c5 {
    width: 200px;
  }
}

@media only screen and (min-width:600px) {
  .c10 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media only screen and (max-width:330px) {
  .c12 {
    font-size: 0.85rem;
  }
}

@media only screen and (min-width:600px) {
  .c12 {
    margin: 0 5px 0 0;
  }
}

@media only screen and (max-width:330px) {
  .c13 {
    font-size: 0.85rem;
  }
}

@media only screen and (min-width:600px) {
  .c13 {
    margin-bottom: 0;
  }
}

@media only screen and (min-width:768px) {
  .c2 {
    height: 80px;
  }
}

@media only screen and (min-width:768px) {
  .c3 {
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
  }
}

@media only screen and (min-width:1200px) {
  .c3 {
    padding: 0;
  }
}

@media only screen and (min-width:350px) {

}

@media only screen and (min-width:768px) {
  .c7 {
    display: block;
  }
}

@media only screen and (min-width:992px) {
  .c7 {
    font-size: 1.6rem;
  }
}

<header
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <a
          class="c4"
        >
          <h1
            class="c5"
          >
            <img
              alt="FooDublin Logo"
              class="c6"
              src="/images/logo.svg"
            />
          </h1>
        </a>
        <h2
          class="c7"
        >
          Mocked claim text
        </h2>
      </div>
    </div>
  </div>
  <div
    class="c8"
    data-testid="header-bar"
  >
    <div
      class="c9"
    >
      <div
        class="c10"
        data-testid="breadcrumbs"
      >
        <div
          class="c11"
        >
          <div
            class="c12"
          >
            <a
              class="c4"
            >
              Home
            </a>
          </div>
          <span
            class="c13"
          >
            &gt;
          </span>
        </div>
        <div
          class="c14"
        >
          <div
            class="c12"
          >
            <a
              class="c15"
              disabled=""
            >
              Fake restaurant
            </a>
          </div>
        </div>
      </div>
      <a
        class="c4"
      >
        <i
          class="material-icons"
        >
          bookmarks
        </i>
        FAVORITES
      </a>
    </div>
  </div>
</header>
`;

exports[`Component: Header should render extended 1`] = `
.c5 {
  font-size: 0.85rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 600;
  cursor: pointer;
  color: #FBA52B;
}

.c5 i {
  font-size: 0.8em;
  margin-right: 4px;
}

.c6 {
  width: 225px;
  margin: 15px 0 25px;
}

.c7 {
  max-width: 300px;
}

.c4 svg {
  border: 0;
  color: transparent;
  -webkit-transition: fill ease-out 250ms;
  transition: fill ease-out 250ms;
  fill: #FBA52B;
}

.c4 path:not(:first-of-type) {
  fill: #171819;
  -webkit-transform-origin: 130px 106px;
  -ms-transform-origin: 130px 106px;
  transform-origin: 130px 106px;
}

.c4:hover svg {
  fill: #EC7E00;
}

.c4:hover path:nth-of-type(2) {
  -webkit-animation: WTuhh 560ms ease-in-out;
  animation: WTuhh 560ms ease-in-out;
}

.c0 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-bottom: 1px solid #D8D8D8;
  background-image: url(/images/food.jpg);
  background-color: #A7A7A7;
  background-size: cover;
  background-position: center;
}

.c1 {
  width: 100%;
  background: rgba(0,0,0,0.8);
  height: 550px;
  padding: 0 30px;
}

.c2 {
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  display: none;
}

.c8 {
  font-size: 1.25rem;
  text-align: center;
  font-weight: 400;
  color: #A7A7A7;
  margin-bottom: 35px;
}

@media only screen and (min-width:330px) {
  .c5 {
    font-size: 1rem;
  }
}

@media only screen and (min-width:540px) {
  .c5 {
    -webkit-transition: color 0.2s ease-out;
    transition: color 0.2s ease-out;
  }

  .c5:hover {
    color: #EC7E00;
  }
}

@media only screen and (min-width:768px) {
  .c6 {
    width: 270px;
  }
}

@media only screen and (min-width:992px) {
  .c6 {
    width: 300px;
    margin: 0 0 30px;
  }
}

@media only screen and (min-width:768px) {
  .c1 {
    height: 440px;
  }
}

@media only screen and (min-width:1200px) {
  .c3 {
    display: block;
    position: absolute;
    top: 0;
    right: 0;
  }
}

@media only screen and (min-width:350px) {
  .c8 {
    font-size: 1.4rem;
  }
}

@media only screen and (min-width:768px) {
  .c8 {
    font-size: 2rem;
  }
}

@media only screen and (min-width:992px) {
  .c8 {
    font-size: 2.5rem;
  }
}

<header
  class=""
>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <div
          class="c3"
        >
          <a
            aria-label="View source on GitHub"
            class="c4"
            href="https://github.com/jdmiguel/foodublin"
            rel="noopener noreferrer"
          >
            <svg
              aria-hidden="true"
              height="80"
              viewBox="0 0 250 250"
              width="80"
            >
              <path
                d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"
              />
              <path
                d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2"
              />
              <path
                d="M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z"
              />
            </svg>
          </a>
        </div>
        <a
          class="c5"
        >
          <h1
            class="c6"
          >
            <img
              alt="FooDublin Logo"
              class="c7"
              src="/images/logo.svg"
            />
          </h1>
        </a>
        <h2
          class="c8"
        >
          Mocked claim text
        </h2>
      </div>
    </div>
  </div>
</header>
`;
